code/Unsafe/output/unionrs.txt
error[E0133]: access to union field is unsafe and requires unsafe function or block
 --> union.rs:9:15
  |
9 |     let _f =  u.f1;
  |               ^^^^ access to union field
  |
  = note: the field may not be properly initialized: using uninitialized data will cause undefined behavior

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
